[package]
name = "reactor-ls-game"
version = "0.1.0"
authors = ["Kai Giebeler <reactor-ls@kai.giebeler.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reactor-ls-engine = { path="../engine" }

glium = "0.28.0"
obj = { version = "0.10", features = ["genmesh"] }
stl_io = "0.5.2"
cgmath = "0.17.0"